fix: Ensure text remains visible during webfont load

--- a/src/style/default.css
+++ b/src/style/default.css
@@ -1,6 +1,7 @@
 @font-face {
     font-family: 'Inter';
     src: url('/font/Inter.ttf');
+    font-display: swap;
 }
 
 @keyframes popin {
